<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/dialog_edit_team">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_team_number"
            style="@style/TextInputLayoutTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_team_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_team_number"
                android:inputType="number"
                android:maxLength="6"
                android:minEms="7"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_team_name"
            style="@style/TextInputLayoutTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/layout_team_number"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_team_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_team_name"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_autonomous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/period_autonomous"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/layout_team_number" />

        <CheckBox
            android:id="@+id/cb_latching"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/latching"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/cb_sampling"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_autonomous" />

        <CheckBox
            android:id="@+id/cb_sampling"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sampling"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cb_latching"
            app:layout_constraintTop_toBottomOf="@+id/tv_autonomous" />

        <CheckBox
            android:id="@+id/cb_marker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/marker_claimed"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/cb_parking"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_latching" />

        <CheckBox
            android:id="@+id/cb_parking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/parking"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cb_marker"
            app:layout_constraintTop_toBottomOf="@+id/cb_sampling" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_minerals_collected"
            style="@style/TextInputLayoutTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_marker">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_minerals_collected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="9"
                android:hint="@string/prompt_minerals_collected"
                android:inputType="number"
                android:maxLength="3"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_teleop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/period_teleop"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_minerals_collected" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_minerals_depot"
            style="@style/TextInputLayoutTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@+id/layout_minerals_lander"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_teleop">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_minerals_depot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_minerals_depot"
                android:inputType="number"
                android:maxLength="3" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_minerals_lander"
            style="@style/TextInputLayoutTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/layout_minerals_depot"
            app:layout_constraintTop_toBottomOf="@+id/tv_teleop">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_minerals_lander"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_minerals_lander"
                android:inputType="number"
                android:maxLength="3" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_endgame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/period_end_game"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_minerals_depot" />

        <RadioGroup
            android:id="@+id/rg_end_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_endgame">

            <RadioButton
                android:id="@+id/rb_parking_none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/none"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/rb_parking_latched"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/robot_latched"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/rb_parking_partial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/partially_parked"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/rb_parking_complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/completely_parked"
                android:textSize="15sp" />

        </RadioGroup>

        <TextView
            android:id="@+id/tv_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/category_other"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_end_game" />

        <TextView
            android:id="@+id/tv_preferred_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/preferred_location"
            android:textColor="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/tv_other" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_preferred_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            app:checkedButton="@id/rb_location_none"
            app:layout_constraintTop_toBottomOf="@+id/tv_preferred_location"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rb_location_none"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rb_location_depot"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_preferred_depot"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rb_location_crater"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_preferred_crater"
                android:textSize="16sp" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_comments"
            style="@style/TextInputLayoutTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggle_preferred_location">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="9"
                android:hint="@string/team_comments"
                android:inputType="textImeMultiLine"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
