<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/card_horizontal_margin"
    android:layout_marginTop="@dimen/card_vertical_margin"
    android:layout_marginEnd="@dimen/card_horizontal_margin"
    android:layout_marginBottom="@dimen/card_vertical_margin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_team_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textColor="@android:color/white"
            android:textSize="19sp"
            app:layout_constraintEnd_toStartOf="@+id/iv_team_expand"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/team_id_name" />

        <ImageView
            android:id="@+id/iv_team_expand"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_expand_more"
            android:tint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_team_predicted_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingBottom="4dp"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_team_name"
            tools:text="@string/team_predicted_score" />

        <TextView
            android:id="@+id/tv_team_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/tv_team_predicted_score"
            tools:layout_editor_absoluteX="14dp"
            tools:text="@string/team_description"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_edit"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/action_edit"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_team_description"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_delete"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="4dp"
            android:text="@string/action_delete"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/btn_edit"
            app:layout_constraintTop_toBottomOf="@+id/tv_team_description"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
