<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/AppTheme">

    <LinearLayout
        android:id="@+id/layout_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?android:textColorPrimary"
            android:textSize="17.5sp"
            tools:text="Account Name" />

        <TextView
            android:id="@+id/tv_account_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="email@example.com" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_account_sign_out"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/action_sign_out"
            android:textSize="16sp"
            app:cornerRadius="0dp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_account_sign_in"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="14dp"
        android:text="@string/action_sign_in"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_team_info"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="14dp"
        android:text="@string/title_team_info"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_about"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="14dp"
        android:text="@string/title_about"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="8dp" />

</LinearLayout>
